# Robot-waiter

./: README.md
garson/: install_dependencies.sh  install_models_ROSDS_copy.sh
garson/costa_robot/: CMakeLists.txt  package.xml
garson/costa_robot/map/: map.pgm  map_new.pgm
garson/costa_robot/param/: costmap_common_params.yaml  dwa_local_planner_params.yaml  global_planner_params.yaml  local_costmap_params.yaml  move_base_params.yaml  navfn_global_planner_params.yaml  r200_costmap_params.yaml  sim_dwa_local_planner_params.yaml
garson/costa_robot/src/: nan_filter.py
garson/garson_description/: CMakeLists.txt  package.xml
garson/garson_gazebo/: CMakeLists.txt  package.xml
garson/garson_gazebo/launch/: main_empty.launch  main_simple.launch  main_tb3.launch  move_to_table_action_server.launch  put_robot_in_world.launch  real_webserver_demo.launch  save_waypoints_server.launch  sim_pick_go_return_demo.launch  sim_webserver_demo.launch  simulated_load_sensor_start.launch  spawn_tb3.launch  start_save_waypoints_system.launch  tb3_sim_pick_go_return_demo.launch  tb3_sim_webserver_demo.launch  waypoints_test.launch
garson/garson_gazebo/scripts/: move_base_square.py  move_to_table_action_server.py  pick_calibrate_go_return_pipeline.py  pickle_commons.py  real_webserver_demo.py  save_waypoint.py  sim_diagnostics_pub.py  sim_webserver_demo.py  simulated_loadsensor_driver.py
garson/garson_gazebo/setup/: setup_dependencies.sh
garson/garson_gazebo/srv/: SaveWaypoint.srv
garson/garson_gazebo/waypoints_saved/: casa.pickle  closerfinalmap.pickle  finalmap.pickle  new_map.pickle  simple10x10.pickle
garson/turtlecosta_gazebo/: CMakeLists.txt  package.xml
garson_systems/barista_ARDUINO/: setup_arduino.sh
garson_systems/barista_systems/: 47-hokuyo.rules  48-arduino.rules  CMakeLists.txt  package.xml
garson_systems/barista_web_server_pkg/: CMakeLists.txt  package.xml
garson_systems/barista_worlds/: CMakeLists.txt  package.xml
