<?xml version="1.0"?>
<package format="2">
  <name>barista_web_server_pkg</name>
  <version>0.0.0</version>
  <description>The barista_web_server_pkg package</description>

  <maintainer email="rdaneel@todo.todo">rdaneel</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roswww</build_depend>
  <build_export_depend>roswww</build_export_depend>
  <exec_depend>roswww</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
