<?xml version="1.0"?>
<package>
  <name>barista_worlds</name>
  <version>0.0.0</version>
  <description>The barista_worlds package</description>
  <maintainer email="rdaneel@todo.todo">rdaneel</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  <run_depend>gazebo_ros</run_depend>


<export>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
  </export>
</package>
